	  Pidgin and Finch, which use the glib event loop, were changed to use
	  g_timeout_add_seconds() on glib >= 2.14 when possible.  This allows
	  glib to better group our longer timers to increase power efficiency.
	  (Arjan van de Ven with Intel Corporation)
	* No longer linkifies screennames containing @ signs in join/part
	  notifications in chats

	Pidgin:
	* Ensure only one copy of Pidgin is running with a given configuration
	  directory.  The net effect of this is that trying to start Pidgin a
	  second time will raise the buddy list.  (Gabriel Schulhof)
	* Undo capability in the conversation window

version 2.0.2 (??/??/????):
	Pidgin:
	* Added a custom conversation font option to preferences

	libpurple:
	* Moving an ICQ buddy from one group to another no longer
	  re-requests authorization from that person (Rene Hausleitner)
	* Added nullprpl, an example protocol plugin (Ryan Barrett)
	* Fixed SOCKS5 bug which caused Jabber file receiving to fail

	Finch:
	* Auto account reconnecting

version 2.0.1 (05/24/2007):
	* Buddy list update speedups when buddy icons are not being
	  displayed.  (Scott Wolchok)
	* Fix icons on docklet change status menu to match the status selector
	* Custom smileys on MSN can be saved by right-clicking on them
	* Fix a crash deleting a buddy that is in the Buddy List more than once
	* Compile fixes for Solaris
	* Fix GTalk formatting when there's a space before/after a */_
	* Fix Log viewer crash when the filename is not in the expected format
	* Get User Info now provides immediate feedback, and is updated when the
	  user information is available
	* Make the choose buddy icon dialog correctly list the current directory
	* Fix for buddy icons disappearing
	* Timestamps are always on in debug output (-d) and Debug Window now
	* Don't escape html entities in Yahoo! system messages
	* Fix for the choose buddy icon dialog resizing strangely as files are selected
	* Receives notifications when XMPP buddies send "leaving chat"